# media_subtitler

./: .env.example  .gitignore  AGENTS.md  DESKTOP.md  DISCLAIMER.md  README.md  TECHNICAL.md  config.py  desktop_launcher.py  pyproject.toml  requirements-desktop.txt  requirements.txt  run.py  subtitle_pipeline.py
.github/workflows/: ci.yml
app/: __init__.py  routes.py
app/models/: cost_estimator.py  subtitle_pipeline.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
contrib/: check-gpu-services.sh  start-drama-subtitler-gpu.ps1  start-media-subtitler-gpu.ps1  whisper-server.py
docs/: macos-coreml.md
drama_subtitler/: __init__.py  models.py  pipeline.py
media_subtitler/: __init__.py  models.py  pipeline.py  remote_whisper_server.py
media_subtitler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build-macos-app.sh  check-windows.ps1  install-macos-finder-shortcut.sh  macos-start-finder-job.sh  run-web-windows.ps1  setup-macos.sh  setup-windows.ps1
tests/: conftest.py  test_cost_estimator.py  test_integration.py  test_routes.py  test_subtitle_pipeline.py  test_utils.py
