[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media_subtitler"
version = "0.1.0"
description = "Whisper-based bilingual subtitle pipeline for Japanese/Korean media."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "requests>=2.28",
  "faster-whisper>=1.1",
  "flask>=2.2",
]

[project.optional-dependencies]
# The legacy Flask web UI lives under app/. Install with `pip install
# .[webapp]` to get those deps as well; library consumers (nasorg) don't
# need them.
webapp = [
  "flask>=2.2",
  "python-dotenv>=1.0",
]
dev = [
  "pytest>=7",
  "pytest-mock>=3",
]
desktop = [
  "pywebview>=5.4",
  "pyinstaller>=6.6",
]
qwen-asr = [
  "qwen-asr>=0.0.6",
]

[project.scripts]
media-subtitler-models = "media_subtitler.models:main"
media-subtitler-whisper-server = "media_subtitler.remote_whisper_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_subtitler*"]
# NB: do not add "media*" here -- that glob also matches "media_subtitler"
# and silently ships an empty package (exclude wins over include). The
# media/ data dir has no __init__.py, so it is never discovered anyway.
exclude = ["app*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that call real external APIs (Ollama, OpenRouter, etc.)",
    "slow: tests that take >5s or load large models",
    "ollama: tests that require a running Ollama daemon",
    "openrouter: tests that require an OpenRouter API key",
    "deepseek: tests that require a DeepSeek API key",
]
